--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "express": "^4.21.2",
     "nodemon": "^3.1.7",
     "path": "^0.12.7"
-  }
+  },
+  "version": "1.0.0",
+  "description": "You are a developer for an educational analytics platform that helps teachers evaluate students' performance. The platform maintains student records, including their names, grades, and marks in multiple subjects, stored in a JSON format.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
